# whisper_subtitles

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: generate_ghcr.yaml
app/core/: config.py  logging.py
app/monitoring/: file_changes.py
app/speech_to_text/: README.md  __init__.py  models.py  run.py
app/stt/: README.md  download_models.py  download_whisper.py  models.py  run.py
app/stt/as_srt/: README.md
app/video/: __init__.py
app/video/add_subtitles/: README.md  download_tool.py  from_srt.py  run.py
app/video/check_subtitles/: download_tool.py  run.py
app/video/extract_audio/: run.py
app/video/get_duration/: run.py
app/video/is_video/: run.py
tests/: generate_test_data.ipynb
tests/Assets/: 1.srt  2.srt  3.srt  README.md
