[project]
name = "subtitles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.2",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
